--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body{
   background: #F4F6F9  !important;
+  margin: 0 !important;
 }
 /* You can add global styles to this file, and also import other style files */
 @font-face {
