--- a/src/app/pages/driver/update-documents-driver/update-documents-driver.component.html
+++ b/src/app/pages/driver/update-documents-driver/update-documents-driver.component.html
@@ -37,8 +37,11 @@
     <div style='text-align: center'>
         <cwc-icon name='accepted-ok' size='120px' color='bright-green'></cwc-icon>
         <h3 class='modal--confirmation__message'>
-            Los cambios han sido guardados exitosamente. <br>
-            
+            El documento se ha cargado exitosamente. 
         </h3>
+        <p class="modal-text-secondary">
+            El documento será revisado por un asesor, <br/>
+            al ser validado recibirá una notificación.
+        </p>
     </div>
 </cwc-modal>
