--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -11,12 +11,15 @@
 }
 .input-login {
     width: 100%;
+    padding-bottom: 0.5rem;
 }
-.btn-login {
-    margin-top: 1rem;
-}
+
 .content-reset-password {
     display: flex;
     justify-content: flex-end;
     margin-top: 2rem;
+}
+
+.loading-content {
+    top: 0;
 }
