--- a/src/app/pages/driver/update-driver/update-driver.component.css
+++ b/src/app/pages/driver/update-driver/update-driver.component.css
@@ -1,7 +1,13 @@
-.input-new-driver {
+.input-update-driver {
     width: 100%;
+    margin-bottom: 0.5rem;
 }
 .input-check-driver {
     margin-top: 5px;
     margin-bottom: 1.4rem;
+}
+
+.loading-content {
+    top: 0;
+    width: 80%;
 }
