--- a/src/app/pages/profile/update-profile/update-profile.component.css
+++ b/src/app/pages/profile/update-profile/update-profile.component.css
@@ -4,8 +4,14 @@ h2.title-form {
 }
 .input-update-profile {
     width: 100%;
+    margin-bottom: 0.5rem;
 }
 .input-check-update-profile {
     margin-top: 5px;
     margin-bottom: 1.4rem;
+}
+
+.loading-content {
+    top: 0;
+    width: 80%;
 }
