--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,21 +1,22 @@
 <cwc-grid class="demo-grid" >
-    <cwc-cell colspan="6" mobile-colspan="12">
+    <cwc-cell colspan="12" mobile-colspan="12">
+        <cwc-button routerLink="/" variant="link" leading-icon="arrow-left-single">Atrás</cwc-button>
+        <h2 class="title-profile">Mi Perfil</h2>
+    </cwc-cell>
+
+    <cwc-cell colspan="5" mobile-colspan="12">
         <cwc-card class="m-all-xs" design-version="v2">
             <div class="main-content-card">
-                <div class="content-basic-info">
-                    <div class="avatar-info">
-                        <!-- <cwc-avatar size="small" variant="positive" name="Michael Wasserman" class="m-h-xs"></cwc-avatar> -->
-                        <cwc-avatar 
-                            size="small"
-                            image-source="https://scstdcnxdsld01.z21.web.core.windows.net/dls/assets/samples/images/uploaded-picture-2.jpg"
-                            name="Michael Wasserman"
-                            class="m-h-xs"
-                        ></cwc-avatar>
-                        <span class="style-title name">Eduardo Castillo López</span>
-                    </div>
-
-                    <cwc-button (click)="updateInfoUser()" variant="link">Editar</cwc-button>
-                </div>
+                <div class="avatar-info">
+                    <!-- <cwc-avatar size="small" variant="positive" name="Michael Wasserman" class="m-h-xs"></cwc-avatar> -->
+                    <cwc-avatar 
+                        size="small"
+                        image-source="https://scstdcnxdsld01.z21.web.core.windows.net/dls/assets/samples/images/uploaded-picture-2.jpg"
+                        name="Michael Wasserman"
+                        class="m-h-xs"
+                    ></cwc-avatar>
+                    <span class="style-title name">Eduardo Castillo López</span>
+                </div>    
 
                 <hr>
 
@@ -29,73 +30,48 @@
                             <div class="padding-contents">
                                 <span class="attr-user">Correo electrónico</span>
                                 <span>eduardo.castillo@gmail.com</span>
-                            </div>
+                            </div>                            
+                        </div>
+                    </cwc-cell>
+                </cwc-grid>
+
+                <cwc-grid class="demo-grid" >
+                    <cwc-cell colspan="12" mobile-colspan="12">
+                        <div class="col-attr-info">                            
                             <div>
                                 <span class="attr-user">NIT o CC</span>
                                 <span>1234567890</span>
                             </div>
-                        </div>
-                    </cwc-cell>
-                </cwc-grid>
-            </div>
-        </cwc-card>
-    </cwc-cell>
-
-    <cwc-cell colspan="6" mobile-colspan="12">
-        <cwc-card class="m-all-xs" design-version="v2">
-            <div class="main-content-card">
-                <span class="style-title">Papelería</span>
-
-                <hr>
-
-                <cwc-grid class="demo-grid" >
-                    <cwc-cell colspan="12" mobile-colspan="12">
-                        <div class="content-docs">
-                            <div>
-                                <div class="item-archives">
-                                    <cwc-icon></cwc-icon>
-                                    <!-- <cwc-icon name="close" size="14px" color="bright-blue"></cwc-icon> -->
-                                    <span class="text-archive">Licencia de conducir</span>
-                                </div>
-                                <div class="item-archives">
-                                    <cwc-icon></cwc-icon>
-                                    <span class="text-archive">RUT</span>
-                                </div>
-                                <div class="item-archives">
-                                    <cwc-icon></cwc-icon>
-                                    <span class="text-archive">Cámara de Comercio</span>
-                                </div>
-                            </div>
-
-                            <div class="padding-contents">
-                                <div class="item-archives">
-                                    <cwc-icon></cwc-icon>
-                                    <span class="text-archive">Acta de nacimiento</span>
-                                </div>
-                                <div class="item-archives">
-                                    <cwc-icon></cwc-icon>
-                                    <span class="text-archive">Certificado de curso</span>
-                                </div>
-                            </div>
-
-                            <div class="content-action-docs">
-                                <cwc-button (click)="updateDocuments()" variant="link">Actualizar documentos</cwc-button>
+                            <div class="content-btn-edit padding-contents">
+                                <cwc-button (click)="updateInfoUser()" variant="link">Editar</cwc-button>
                             </div>
                         </div>
                     </cwc-cell>
                 </cwc-grid>
             </div>
         </cwc-card>
-    </cwc-cell>
+    </cwc-cell>   
 
-    <cwc-cell colspan="6" mobile-colspan="12">
+    <cwc-cell colspan="7" mobile-colspan="12">
         <cwc-card class="m-all-xs" design-version="v2">
             <div class="main-content-card">
-                <span class="style-title">Papelería</span>
-
-                <span class="text-clever">Revisa tus datos y mantén tu perfil actualizado para tener un mejor<br/> seguimiento de tus viajes.</span>
+                <span class="style-title">Accede a tu viaje CEMEX</span>                
             
                 <div class="content-btn-clever">
+                    <span class="style-text">Verifica el estado de tus viajes y actualizaciones de los mismos.</span>
+                    <div class="spacing"></div>
+                    <cwc-button (click)="yourTripCemex()" design-version="v2"><span class="text-btn-flit">Tu viaje CEMEX</span></cwc-button>
+                </div>
+            </div>
+        </cwc-card>
+
+        <cwc-card class="m-all-xs card-clever" design-version="v2">
+            <div class="main-content-card">
+                <span class="style-title">Accede a tu cuenta Clever</span>
+                
+                <div class="content-btn-clever">
+                    <span class="style-text">Revisa tus datos y mantén tu perfil actualizado para tener un mejor seguimiento de tus viajes.</span>
+                    <div class="spacing"></div>
                     <cwc-button (click)="goCleverGlobal()" design-version="v2"><span class="text-btn-clever">Clever global</span></cwc-button>
                 </div>
             </div>
