--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,8 +2,10 @@
     <cwc-sidenav-menu id="menuNav" slot="menu-items">
         <cwc-sidenav-menu-item label="Inicio" iconName="information-rounded-fill" routerLink="/"></cwc-sidenav-menu-item>
         <cwc-sidenav-menu-item label="Mis viajes" iconName="options-delivery" routerLink="mis-viajes"></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item label="Conductores" iconName="module-user-management" routerLink="driver"></cwc-sidenav-menu-item>
+        <cwc-sidenav-menu-item label="Usuarios" iconName="social-group-regular" routerLink="usuarios"></cwc-sidenav-menu-item>
         <cwc-sidenav-menu-item label="Vehiculos" iconName="product-line-aggregates" routerLink="vehiculos"></cwc-sidenav-menu-item>
+        <cwc-sidenav-menu-item label="Empresas" iconName="options-pickup" routerLink="empresas"></cwc-sidenav-menu-item>
+        <cwc-sidenav-menu-item label="Lista de espera" iconName="report" routerLink="lista-de-espera"></cwc-sidenav-menu-item>
         
         <div class="content-logout">            
             <cwc-sidenav-menu-item (click)="logout()" class="item-logout" label="Logout"></cwc-sidenav-menu-item> 
