actualizacion del perfil

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,9 +7,9 @@
             <cwc-grid class="demo-grid">
                 <cwc-cell colspan="12" mobile-colspan="12">
                     <cwc-input 
-                        formControlName="user"
-                        [status]="getStatusField('user')"
-                        [statusMessage]="getMsgField('user', 'usuario')"
+                        formControlName="email"
+                        [status]="getStatusField('email')"
+                        [statusMessage]="getMsgField('email', 'usuario')"
                         type="email"
                         label='Usuario' 
                         class='input-login'
