--- a/src/app/not-found/not-found/not-found.component.html
+++ b/src/app/not-found/not-found/not-found.component.html
@@ -7,7 +7,7 @@
             Vuelva atrás y elija un nuevo enlace, o vuelva a intentarlo más tarde.
         </div>
         <div class="content-btn">
-            <cwc-button designVersion="v2" variant='primary'>Ir al Inicio</cwc-button>
+            <cwc-button (click)="goHome()" designVersion="v2" variant='primary'>Ir al Inicio</cwc-button>
         </div>
     </div>
 </div>
