--- a/src/app/pages/driver/new-driver/new-driver.component.html
+++ b/src/app/pages/driver/new-driver/new-driver.component.html
@@ -96,7 +96,7 @@
             </div>
         </div> -->
 
-        <app-upload-files></app-upload-files>    
+        <!-- <app-upload-files></app-upload-files>    
         <div class="upload-file">
             <app-upload-files></app-upload-files>    
         </div>
@@ -104,7 +104,7 @@
         <div class="upload-file">
             <app-upload-files></app-upload-files>    
         </div>
-        <app-upload-files></app-upload-files>    
+        <app-upload-files></app-upload-files> -->    
     </cwc-cell>
 
 </cwc-grid>
